--- a/week1-Day2/multipagetask3/html-course.html
+++ b/week1-Day2/multipagetask3/html-course.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>HTML Course</title>
+    <title>Web Development</title>
   </head>
   <body>
-    <h1>HTML Course</h1>
+    <h1>Web Development</h1>
 
     <nav>
       <a href="../../index.html">Home</a> |
@@ -15,12 +15,13 @@
     <!-- Breadcrumb -->
     <p>
       <a href="../../index.html">Home</a> >
-      <a href="../index.html">Courses</a> >
-      <a href="index.html">Web Development</a> > HTML Course
+      <a href="../index.html">Courses</a> > Web Development
     </p>
 
     <hr />
 
-    <p>This page contains details about the HTML course.</p>
+    <p>
+      <a href="html-course.html">HTML Course</a>
+    </p>
   </body>
 </html>
