--- a/week1-Day2/multipagetask3/index.html
+++ b/week1-Day2/multipagetask3/index.html
@@ -1,27 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Web Development</title>
-  </head>
-  <body>
-    <h1>Web Development</h1>
+<head>
+    <meta charset="UTF-8">
+    <title>Home</title>
+</head>
+<body>
+
+    <h1>Training Portal</h1>
 
     <nav>
-      <a href="../../index.html">Home</a> |
-      <a href="../index.html">Courses</a>
+        <a href="index.html">Home</a> |
+        <a href="courses/index.html">Courses</a>
     </nav>
 
-    <!-- Breadcrumb -->
-    <p>
-      <a href="../../index.html">Home</a> >
-      <a href="../index.html">Courses</a> > Web Development
-    </p>
+    <hr>
 
-    <hr />
+    <p>Welcome to the Training Portal Website.</p>
 
-    <p>
-      <a href="html-course.html">HTML Course</a>
-    </p>
-  </body>
+</body>
 </html>
